[package]
name = "egui_wgpu_performance"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts","wgpu","wayland"] }
wgpu = { version = "27", default-features = false, features = [ "vulkan" ] }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2